# automation_test

./: .env.example  README.md  main.py  products.csv  pyproject.toml  requirements.txt
application/: base.py  checkout_use_case.py  extract_products_use_case.py  login_use_case.py
domain/entities/: product.py  user.py
infrastructure/: browser_service.py  csv_exporter.py  handle_errors.py  logger.py
settings/: containers.py
settings/configs/: browser_config.py  general.py
tests/: conftest.py  test_export.py  test_login.py
